tests/baselines/reference/genericTypeAssertions2.errors.txt
tests/cases/compiler/genericTypeAssertions2.ts(10,5): error TS2322: Type 'B<文字>' is not assignable to type 'A<数字>'.
  Types of property 'foo' are incompatible.
    Type '(x: 文字) => 无值' is not assignable to type '(x: 数字) => 无值'.
      Types of parameters 'x' and 'x' are incompatible.
        Type '数字' is not assignable to type '文字'.
tests/cases/compiler/genericTypeAssertions2.ts(11,5): error TS2322: Type 'A<数字>' is not assignable to type 'B<数字>'.
  Property 'bar' is missing in type 'A<数字>'.
tests/cases/compiler/genericTypeAssertions2.ts(13,21): error TS2352: Type '未定[]' cannot be converted to type 'A<数字>'.
  Property 'foo' is missing in type '未定[]'.


==== tests/cases/compiler/genericTypeAssertions2.ts (3 errors) ====
    class A<T> { foo(x: T) { } }
    class B<T> extends A<T> {
        bar(): T {
            return null;
        }
    }
    
    var foo = new A<number>();
    var r: A<string> = <B<string>>new B();
    var r2: A<number> = <B<string>>new B(); // error
        ~~
!!! error TS2322: Type 'B<文字>' is not assignable to type 'A<数字>'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Type '(x: 文字) => 无值' is not assignable to type '(x: 数字) => 无值'.
!!! error TS2322:       Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:         Type '数字' is not assignable to type '文字'.
    var r3: B<number> = <A<number>>new B(); // error
        ~~
!!! error TS2322: Type 'A<数字>' is not assignable to type 'B<数字>'.
!!! error TS2322:   Property 'bar' is missing in type 'A<数字>'.
    var r4: A<number> = <A<number>>new A();
    var r5: A<number> = <A<number>>[]; // error
                        ~~~~~~~~~~~~~
!!! error TS2352: Type '未定[]' cannot be converted to type 'A<数字>'.
!!! error TS2352:   Property 'foo' is missing in type '未定[]'.